--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       color: #333;
     }
     header {
-      background-color: #6200ea;
+      background-color:#82B1FF;
       color: white;
       padding: 20px 0;
       text-align: center;
@@ -23,12 +23,16 @@
       margin: 0;
       font-size: 2.5em;
     }
+	header img {
+      width: 50px;
+      height: 50px;
+    }
     section {
       padding: 40px;
       text-align: center;
     }
     section h2 {
-      color: #6200ea;
+      color: #82B1FF;
       font-size: 2em;
     }
     section p {
@@ -50,10 +54,10 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
     .feature h3 {
-      color: #6200ea;
+      color:#82B1FF;
     }
     .download-btn {
-      background-color: #6200ea;
+      background-color:#82B1FF;
       color: white;
       padding: 15px 30px;
       text-decoration: none;
@@ -77,27 +81,28 @@
 <body>
 
 <header>
+ <img src="logo.png" alt="App Logo">
   <h1>Smart Shopping List</h1>
   <p>Your shopping helper</p>
 </header>
 
 <section>
   <h2>About the App</h2>
-  <p>This Android app helps you [brief description of what your app does]. It's designed for [target audience] and offers features such as [main feature], [another feature], and more!</p>
+  <p>Smart Shopping List is a user-friendly offline app that helps simplify your shopping experience. Whether you're planning for groceries, household essentials, or any other shopping needs, this app allows you to easily create, organize, and manage your lists. Track what you've purchased, and even mark items off as you go.</p>
   
   <h2>Features</h2>
   <div class="features">
     <div class="feature">
-      <h3>Feature 1</h3>
-      <p>Describe the first key feature of your app here.</p>
+      <h3>Shopping Lists</h3>
+      <p>Create useful lists for shopping</p>
     </div>
     <div class="feature">
-      <h3>Feature 2</h3>
-      <p>Describe another important feature of your app here.</p>
+      <h3>Shopping Lists</h3>
+      <p>Works offline, no internet needed</p>
     </div>
     <div class="feature">
-      <h3>Feature 3</h3>
-      <p>Mention another cool feature of your app here.</p>
+      <h3>Shopping Lists</h3>
+      <p>Easily add and remove products </p>
     </div>
   </div>
   
